add triad analysis, transitivity

--- a/network_data.ipynb
+++ b/network_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,32 +25,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 224,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "study_pub = pd.read_csv(\"../data/study_author_pub.csv\", header=0)\n",
-    "comp_pub = pd.read_csv(\"../data/comp_author_pub.csv\", header=0)\n",
+    "study_pub = pd.read_csv(\"../data/study_author_pub.csv\", header=0,na_values='')\n",
+    "comp_pub = pd.read_csv(\"../data/comp_author_pub.csv\", header=0, na_values='')\n",
+    "study_pub.fillna('', inplace=True)\n",
+    "comp_pub.fillna('', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
     "# create author full names to expand author lists of publications\n",
     "study_pub['author_name'] = study_pub['last_name'].str.capitalize() + ', ' + study_pub['first_name'].str.capitalize() + ' ' +  study_pub['middle_initial'].str.upper()\n",
     "comp_pub['author_name'] = comp_pub['last_name'].str.capitalize() + ', ' + comp_pub['first_name'].str.capitalize() + ' ' +  comp_pub['middle_initial'].str.upper()\n",
     "study_pub['author_name_no_mi'] = study_pub['last_name'].str.capitalize() + ', ' + study_pub['first_name'].str.capitalize() \n",
     "comp_pub['author_name_no_mi'] = comp_pub['last_name'].str.capitalize() + ', ' + comp_pub['first_name'].str.capitalize() \n",
-    "study_authors_df = study_pub[['author_name','author_name_no_mi']]\n",
-    "comp_authors_df = comp_pub[['author_name','author_name_no_mi']]\n",
-    "study_authors_df = study_authors_df.drop_duplicates('author_name')\n",
-    "comp_authors_df = comp_authors_df.drop_duplicates('author_name')\n",
-    "study_authors = study_authors_df.values[:,0]\n",
-    "study_authors_nomi = study_authors_df.values[:,1]\n",
-    "comp_authors = comp_authors_df.values[:,0]\n",
-    "comp_authors_nomi = comp_authors_df.values[:,1]\n",
+    "study_pub['author_name'] = study_pub['author_name'].str.strip()\n",
+    "comp_pub['author_name'] = comp_pub['author_name'].str.strip()\n",
+    "study_pub['author_name_no_mi'] = study_pub['author_name_no_mi'].str.strip()\n",
+    "comp_pub['author_name_no_mi'] = comp_pub['author_name_no_mi'].str.strip()\n",
+    "study_authors_df = study_pub[['pi_key', 'author_name','author_name_no_mi']]\n",
+    "comp_authors_df = comp_pub[['pi_key', 'author_name','author_name_no_mi']]\n",
+    "study_authors_df = study_authors_df.drop_duplicates('pi_key')\n",
+    "comp_authors_df = comp_authors_df.drop_duplicates('pi_key')\n",
+    "study_authors = study_authors_df.values[:,1]\n",
+    "study_authors  =  study_authors[~pd.isnull(study_authors)]\n",
+    "study_authors_nomi = study_authors_df.values[:,2]\n",
+    "study_authors_nomi  =  study_authors_nomi[~pd.isnull(study_authors_nomi) ]\n",
+    "comp_authors = comp_authors_df.values[:,1]\n",
+    "comp_authors  =  comp_authors[~pd.isnull(comp_authors)]\n",
+    "comp_authors_nomi = comp_authors_df.values[:,2]\n",
+    "comp_authors_nomi  =  comp_authors_nomi[~pd.isnull(comp_authors_nomi)]\n",
     "#combine all publications\n",
     "all_pub = pd.concat([study_pub, comp_pub], axis=0)\n",
-    "all_pub = all_pub.drop_duplicates('PMID')\n",
     "temp_df = all_pub[['AUTHOR_LIST','PMID']]\n",
     "temp_df = all_pub[['AUTHOR_LIST','PMID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#count activities by each publication\n",
+    "all_pmid_act = all_pub[['PMID', 'ACTIVITY', 'TOTAL_COST']].drop_duplicates(['PMID', 'ACTIVITY'])\n",
+    "all_pmid_act = all_pmid_act.pivot_table(values='TOTAL_COST', index='PMID', columns='ACTIVITY', aggfunc='sum')\n",
+    "all_pmid_act.fillna(0, inplace=True)\n",
+    "#assign activity by max of total cost\n",
+    "col_ind = all_pmid_act.idxmax(axis=1)\n",
+    "pub_activity = col_ind.reset_index()\n",
+    "pub_activity.columns = ['PMID', 'ACTIVITY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "all_pub = all_pub.drop_duplicates('PMID')"
    ]
   },
   {
@@ -62,11 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(382757, 3)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#expand the author list to a long format\n",
     "vals = temp_df.values\n",
@@ -98,6 +158,15 @@
     "            elif a == 'Macmillan, David W C':\n",
     "                group.append('study')\n",
     "                authors.append('Macmillan, David W')\n",
+    "            elif a == 'Kingston, Robert E':\n",
+    "                group.append('Study')\n",
+    "                authors.append('Kingston, Robert')\n",
+    "            elif a == 'Kuroda, Mitzi I':\n",
+    "                group.append('Study')\n",
+    "                authors.append('Kuroda, Mitzi')\n",
+    "            elif a == 'WALTER, JOHANNES':\n",
+    "                group.append('Study')\n",
+    "                authors.append('Walter, Johannes')       \n",
     "            elif a == 'Pendergast, Ann Marie':\n",
     "                group.append('comp')\n",
     "                authors.append('Pendergast, Ann M')\n",
@@ -109,7 +178,22 @@
     "                authors.append('Peterlin, Boris M') \n",
     "            elif a == 'Yan, Shi Du':\n",
     "                group.append('comp')\n",
-    "                authors.append('Yan, Shi D')     \n",
+    "                authors.append('Yan, Shi D') \n",
+    "            elif a == 'Assoian, Richard K':\n",
+    "                group.append('comp')\n",
+    "                authors.append('Assoian, Richard') \n",
+    "            elif a == 'Goodell, Margaret A':\n",
+    "                group.append('comp')\n",
+    "                authors.append('Goodell, Margaret')\n",
+    "            elif a == 'Holden, Hazel M':\n",
+    "                group.append('comp')\n",
+    "                authors.append('Holden, Hazel')\n",
+    "            elif a == 'Janda, Kim D':\n",
+    "                group.append('comp')\n",
+    "                authors.append('Janda, Kim') \n",
+    "            elif a == 'Whittemore, Scott R':\n",
+    "                group.append('comp')\n",
+    "                authors.append('Whittemore, Scott') \n",
     "            else:\n",
     "                group.append('others')\n",
     "                authors.append(a)\n",
@@ -130,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('net_raw.csv', header=0)\n",
+    "df = pd.read_csv('../data/net_raw.csv', header=0)\n",
     "df_other = df[df.group=='others']\n",
     "df_study = df[df.group=='study']\n",
     "df_comp = df[df.group=='comp']"
@@ -151,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 230,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +289,7 @@
     "df_node = df_study_comb[['authors', 'group']]\n",
     "df_node = df_node.drop_duplicates()\n",
     "df_node.columns = ['Id', 'Group']\n",
-    "df_node.to_csv('../data/study_comb_nodes_gephi.csv', header=True, index=False)"
+    "df_node.to_csv('../data/study_comp_nodes_gephi.csv', header=True, index=False)"
    ]
   },
   {
@@ -217,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 231,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 232,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +344,7 @@
    "source": [
     "#unique publications\n",
     "#looping over publications to create edge list\n",
-    "activities = all_pub[['PMID','ACTIVITY']]\n",
+    "activities = pub_activity\n",
     "def getEdges(df):\n",
     "    uniq_pub = df.pmid.unique()\n",
     "    edges_list = np.empty((0,2), 'object')\n",
@@ -315,13 +399,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_study_edges  = createEdges(df_study,  'study_edges')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_comp_edges  = createEdges(df_comp,  'comp_edges')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "53000\n",
+      "54000\n",
+      "55000\n",
+      "56000\n",
+      "57000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_comb_edges  = createEdges(df_study_comb,  'study_comp_edges')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4928, 9)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_comb_edges.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "53000\n",
+      "54000\n",
+      "55000\n",
+      "56000\n",
+      "57000\n",
+      "58000\n",
+      "59000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_author_other_has_pub_gt_5_edges = createEdges(df_author_other_has_pub_gt_5,  'author_other_has_pub_gt_5_edges')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df_comp_edges  = createEdges(df_study_comb,  'study_comp_edges')"
+    "comb_edges = pd.read_csv('../data/study_comp_edges.csv', header = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4005"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(comb_edges.PMID_x.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "comb_nodes = pd.read_csv('../data/study_comb_nodes_gephi.csv', header=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "899"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(comb_nodes.Id.unique())"
    ]
   },
   {
@@ -331,9 +742,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df_author_other_has_pub_gt_10_edges = createEdges(df_study_comb,  'author_other_has_pub_gt_10_edges')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
