--- a/data_exploration_only_fiscal_year_filter_by_cost.ipynb
+++ b/data_exploration_only_fiscal_year_filter_by_cost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
        "       'CONSTRUCTION GRANTS'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -106,6 +106,7 @@
     "after_2015  = df_projects['FY'] > 2015\n",
     "df_projects = df_projects[(~before_2001) & (~after_2015)]\n",
     "#save some project edge attribute\n",
+    "#CORE_PROJECT_NUM contains activity codes\n",
     "df_proj_uniq = df_projects.drop_duplicates('CORE_PROJECT_NUM')\n",
     "df_proj_uniq.to_csv('../data/prj_attribute.csv', index=False, header=True)"
    ]
@@ -1325,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
